--- a/cadastro.html
+++ b/cadastro.html
@@ -4,37 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="cadastro.css">
     <title>Cadastro de usuarios</title>
 </head>
 <body>
     <header>
-        <h1>CADASTRO DE USUÁRIO</h1>
+        <h1 id="titulo">CADASTRO DE USUÁRIO</h1>
     </header>
     
     <main>
-        <form action="">
-            <label for="nome-completo">Nome Completo:</label>
-            <input type="text" name="nome-completo" id="nome-completo">
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email">
-            <label for="tel">Telefone:</label>
-            <input type="number" name="tel" id="tel">
-            <label for="cep">CEP:</label>
-            <input type="number" name="cep" id="cep">
-            <label for="rua">Rua:</label>
-            <input type="text" name="rua" id="rua">
-            <label for="numero">Numero:</label>
-            <input type="number" name="numero" id="numero">
-            <label for="complemento">Complemento:</label>
-            <input type="text" name="complemento" id="complemento">
-            <label for="bairro">Bairro:</label>
-            <input type="text" name="bairro" id="bairro">
-            <label for="cidade">Cidade:</label>
-            <input type="text" name="cidade" id="cidade">
-            <label for="estado">Estado:</label>
-            <input type="text" name="estado" id="estado">
-            <input type="button" value="Cadastrar">
-        
+        <form>
+                <fieldset class="contato">
+                    <legend><strong>Contato</strong></legend>
+                    <div>
+                        <label for="nome-completo"><strong>Nome Completo:</strong></label>
+                        <input type="text" name="nome-completo" placeholder="Nome Completo" id="nome-completo" required>
+                    </div>
+                    <div>
+                        <label for="email"><strong>Email:</strong></label>
+                        <input type="email" name="email" placeholder="Email" id="email" required>
+                    </div>
+                    <div>
+                        <label for="tel"><strong>Telefone:</strong></label>
+                        <input type="number" name="tel" placeholder="Telefone" id="tel" required>
+                    </div>
+                </fieldset>
+                <fieldset class="endereço">
+                    <legend><strong>Endereço</strong></legend>
+                    <div class="p1">
+                        <label for="cep"><strong>Cep:</strong></label>
+                        <input type="number" name="cep" placeholder="Cep" id="cep" required>
+                        <label for="rua"><strong>Rua:</strong></label>
+                        <input type="text" name="rua" placeholder="Rua" id="rua" required>
+                        <label for="numero"><strong>Numero:</strong></label>
+                        <input type="number" name="numero" placeholder="numero" id="numero" required>
+                        <label for="complemento"><strong>Complemento:</strong></label>
+                        <input type="text" name="complemento" placeholder="Complemento" id="complemento" required>
+                    </div>
+                    <div class="p2">
+                        <label for="bairro"><strong>Bairro:</strong></label>
+                        <input type="text" name="bairro" placeholder="Bairro" id="bairro" required>
+                        <label for="cidade"><strong>Cidade:</strong></label>
+                        <input type="text" name="cidade" placeholder="Cidade" id="cidade" required>
+                        <label for="estado"><strong>Estado:</strong></label>
+                        <input type="text" name="estado" placeholder="Estado" id="estado" required>
+                    </div>
+                </fieldset>
+                <button><strong>CADASTRAR</strong></button>      
         </form>
     </main>
 </body>
