--- a/cadastro.html
+++ b/cadastro.html
@@ -39,8 +39,8 @@
                         <input type="text" name="rua" placeholder="Rua" id="rua" >
                         <label for="numero"><strong>Numero:</strong></label>
                         <input type="number" name="numero" placeholder="numero" id="numero" >
-                        <label for="complemento"><strong>Complemento:</strong></label>
-                        <input type="checkbox" name="comp" id="comp">
+                        <label for="complemento"><strong>Complemento:</strong><input type="checkbox" name="comp" id="comp"></label>                      
+                        <input type="text" placeholder="complemento" name="complemento" id="complemento" hidden>
                     </div>
                     <div class="p2">
                         <label for="bairro"><strong>Bairro:</strong></label>
@@ -51,7 +51,7 @@
                         <input type="text" name="estado" placeholder="Estado" id="estado" >
                     </div>
                 </fieldset>
-                <button onclick="comp()"><strong>CADASTRAR</strong></button>      
+                <button><strong>CADASTRAR</strong></button>      
         </form>
 
         <footer></footer>
