--- a/lista.html
+++ b/lista.html
@@ -13,6 +13,112 @@
         <h1 id="title">LISTA DE USUÁRIOS</h1>
     </header>
 
+    <main>
+        <div class="hscroll">
+            <table>
+                <tr>
+                    <th>Nome completo</th>
+                    <th>Email</th>
+                    <th>Telefone</th>
+                    <th>Cep</th>
+                    <th>Rua</th>
+                    <th>Número da casa</th>
+                    <th>Comp.</th>
+                    <th>Bairro</th>
+                    <th>Cidade</th>
+                    <th>Estado</th>
+                    <th>Data de cadastro</th>
+                    <th>...</th>
+                </tr>
+              <tr>
+                    <td>Filipe Pereira Fonseca Santos</td>
+                    <td>filipe_opc2@hotmail.com</td>
+                    <td>11 963040888</td>
+                    <td>03966000</td>
+                    <td>Alexandre cicarelli</td>
+                    <td>593</td>
+                    <td>A</td>
+                    <td>São Mateus</td>
+                    <td>São Paulo</td>
+                    <td>São Paulo</td>
+                    <td>00</td>
+                    <td><button>DEL</button></td>
+              </tr>
+              <tr>
+                    <td>Filipe Pereira Fonseca Santos</td>
+                    <td>filipe_opc2@hotmail.com</td>
+                    <td>11 963040888</td>
+                    <td>03966000</td>
+                    <td>Alexandre cicarelli</td>
+                    <td>593</td>
+                    <td>A</td>
+                    <td>São Mateus</td>
+                    <td>São Paulo</td>
+                    <td>São Paulo</td>
+                    <td>00</td>
+                    <td><button>DEL</button></td>
+              </tr>
+              <tr>
+                    <td>Filipe Pereira Fonseca Santos</td>
+                    <td>filipe_opc2@hotmail.com</td>
+                    <td>11 963040888</td>
+                    <td>03966000</td>
+                    <td>Alexandre cicarelli</td>
+                    <td>593</td>
+                    <td>A</td>
+                    <td>São Mateus</td>
+                    <td>São Paulo</td>
+                    <td>São Paulo</td>
+                    <td>00</td>
+                    <td><button>DEL</button></td>
+              </tr>
+              <tr>
+                    <td>Filipe Pereira Fonseca Santos</td>
+                    <td>filipe_opc2@hotmail.com</td>
+                    <td>11 963040888</td>
+                    <td>03966000</td>
+                    <td>Alexandre cicarelli</td>
+                    <td>593</td>
+                    <td>A</td>
+                    <td>São Mateus</td>
+                    <td>São Paulo</td>
+                    <td>São Paulo</td>
+                    <td>00</td>
+                    <td><button>DEL</button></td>
+              </tr>
+              <tr>
+                    <td>Filipe Pereira Fonseca Santos</td>
+                    <td>filipe_opc2@hotmail.com</td>
+                    <td>11 963040888</td>
+                    <td>03966000</td>
+                    <td>Alexandre cicarelli</td>
+                    <td>593</td>
+                    <td>A</td>
+                    <td>São Mateus</td>
+                    <td>São Paulo</td>
+                    <td>São Paulo</td>
+                    <td>00</td>
+                    <td><button>DEL</button></td>
+              </tr>
+              <tr>
+                    <td>Filipe Pereira Fonseca Santos</td>
+                    <td>filipe_opc2@hotmail.com</td>
+                    <td>11 963040888</td>
+                    <td>03966000</td>
+                    <td>Alexandre cicarelli</td>
+                    <td>593</td>
+                    <td>A</td>
+                    <td>São Mateus</td>
+                    <td>São Paulo</td>
+                    <td>São Paulo</td>
+                    <td>00</td>
+                    <td><button>DEL</button></td>
+              </tr>
+            
+            </table>
+        </div>
+    </main>
+
 
 </body>
 </html>
